# LLM_hybridmaterialAgent

./: .gitignore  README.md  chem_intercept_log.txt  config.py  evaluate_agent.py  graph TD.txt  main_agent.py  output_in_KG  pyproject.toml  report_evaluation_draft.md  requirements.txt  test_gemini_connection.py
.github/: copilot-instructions.md  copilot_instructions.md
.github/skills/kg_matetrials/: SKILL.md
prompts/: novel_candidate_prompt.txt  system_p.txt
tools/: chem_utils.py  llm_utils.py  neo4j_utils.py
